# sissy_trainer

./: .coveragerc  .pylintrc  LICENSE  README.rst  dev_actions.py  pyproject.toml
docs/: api_reference.rst  conf.py  connectivity.rst  events.rst  index.rst  release_notes.rst
docs/_static/css/: property_fix.css  test_patterns.css
docs/source/: base.rst  device_dvs304.rst  device_mps112.rst  exceptions.rst
sistrum/: __init__.py  _auto_protocol.py  _device.py  _enums.py  _event.py  _part_numbers.py  _protocol.py  _resolution.py  device_dvs304.py  device_mps112.py  exceptions.py
tests/: conftest.py  protocol_simdev.py  test_dvs304.py  test_event.py  test_mps112.py  test_resolution.py
