[tool.poetry]
name = "sistrum"
version = "0.1.0"
description = ""
authors = ["Brenda Streiff <git@streiff.net>"]

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.0.0b1"
sphinx-rtd-theme = "^0.5.1"
black = "^20.8b1"
pylint = "^2.7.2"
mypy = "^0.812"
coverage = "^5.5"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
   /(
       \.eggs
     | \.git
     | _build
     | dist
   )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
